# ia-web-parser

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: basic_chat.py  harvest_all.py  tool_calling.py
ia_web_parser/: __init__.py  cli.py  session.py
ia_web_parser/core/: __init__.py  history.py  parser.py  types.py
ia_web_parser/harvester/: __init__.py  base.py  claude.py  deepseek.py  gemini.py  kimi.py  qwen.py
ia_web_parser/providers/: __init__.py  claude.py  deepseek.py  gemini.py  kimi.py  qwen.py
